# dBengine-public

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE_CREDITS.md  README.md  clang-toolchain.cmake
res/animations/: attack_1.fbx  attack_2.fbx  combo1.fbx  combo2.fbx  combo3.fbx  die.fbx  idle.fbx  jump.fbx  jump_fall.fbx  roll.fbx  run.fbx  stab1.fbx  stab2.fbx  twerk.fbx
res/materials/: boss_mat.res  brick.res  grass.res  marble.res  orpheus.res  player_mat.res  red.res  rock_mat.res  test.res  tree_leaves.res  white_rock.res
res/scenes/: ArenaLevel2.scene  MainTutorialCamera.scene
res/scripts/: aisystem.lua  enemy.lua  hitbox.lua  move_y.lua  player_controller.lua  pointLightBloom.lua  script1.lua  spawner.lua  speaker_mover.lua  test.lua  test2.lua  text_test.lua  wave_manager.lua
res/shaders/: basic.vert  shader.vert
src/: CMakeLists.txt  main.cpp
src/BoundingVolume/: AABB.h  BoundingVolume.h  SphereBoundingVolume.h  SquareAABB.h
src/Component/: Component.cpp  Component.h
src/EngineGUI/: EngineGUI.cpp  EngineGUI.h  EngineTheme.h
src/Frustum/: Frustum.h  Plane.h
src/GameObject/: GameObject.cpp  GameObject.h
src/Gizmo/: Gizmo.cpp  Gizmo.h
src/Helpers/: DebugDraw.h  Random.h  Util.h
src/InputManager/: Input.cpp  Input.h
src/Material/: Material.cpp  Material.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Scene/: Scene.cpp  Scene.h
src/Scheduler/: Scheduler.cpp  Scheduler.h
src/Serializers/: MaterialSerializer.cpp  MaterialSerializer.h  SceneSerializer.cpp  SceneSerializer.h  SerializeEmitters.h  (+1 more)
(+460 files in other folders)
